# saganineeleven

./: .editorconfig  .gitignore  README.rst  freeze.txt  pyproject.toml
contrib/: makefixture.py
saganineeleven/: __init__.py  executor.py  straighten.py  stringify.py
saganineeleven/contrib/: cli.py  django.py  docx.py  odt.py
tests/: case_01.docx.xml  case_01.odt.xml  hello.docx  hello.odt  main.py  substitute_variable.docx  substitute_variable.odt  test_django.py  test_element.py  test_executor.py  test_interesting.py  test_straighten.py  test_stringify.py  test_text.py
tests/fixture/: !case_03.odt.xml  !hole_before_ending.odt.xml  !loop_cell.odt.xml  !objects_display.odt.xml  !objects_erase.odt.xml  !on_style.odt.xml  !paragraph_copy_discard.odt.xml  !paragraph_discard_copy.odt.xml  !termial_divided.odt.xml  case_03.docx-rendered.xml  case_03.docx.xml  case_03.odt  case_03.odt.xml  hole_before_ending.docx-rendered.xml  hole_before_ending.docx.xml!  hole_before_ending.odt  loop_cell.docx-rendered.xml  loop_cell.docx.xml  loop_cell.odt  objects_display.docx-rendered.xml  objects_display.docx.xml  objects_display.odt  objects_erase.docx-rendered.xml  objects_erase.docx.xml  objects_erase.odt  on_style.docx-rendered.xml  on_style.docx.xml  on_style.odt  paragraph_copy_discard.docx-rendered.xml  paragraph_copy_discard.docx.xml  paragraph_copy_discard.odt  paragraph_copy_none.docx.xml  paragraph_discard_copy.docx-rendered.xml  paragraph_discard_copy.docx.xml  paragraph_discard_copy.odt  paragraph_none_copy.docx.xml  termial_divided.docx-rendered.xml  termial_divided.docx.xml  termial_divided.odt  terminals_in_different_containers.docx.xml
tests/interesting_cases/: loop_without_bode_in_sigle_element.odt
