[tool.poetry]
name = "saganineeleven"
version = "0.1.0"
description = "Template inside docx, odt"
authors = ["Stepan Bakshayev"]
license = "LGPL-3.0-only"
readme = "README.rst"
packages = [
    { include = "saganineeleven" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
