[tool.poetry]
name = "saganineeleven"
version = "0.1.0"
description = "Template inside docx, odt"
authors = ["Stepan Bakshayev"]
license = "LGPL-3.0-only"
readme = "README.rst"
packages = [
    { include = "saganineeleven" }
]

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
django = "^3.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
